# debug_mem.h

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: debug_mem.h  mem_table.h
src/: debug_mem.c  mem_table.c
test/: test1_unfreed_counter.c  test2_out_of_bounds.c  test3_check_all.c  test4_free_clears_table_entry.c  test5_table_auto_expand.c  test6_table_auto_shrink.c  test7_checksum_pointer_correct.c
